--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -3,9 +3,9 @@
     <!-- ******ABOUT SECTION****** -->
 
     <div class="row">
-        <div class="col cont m-5" data-aos="zoom-in" data-aos-duration="800">
+        <div class="col cont mt-5 m-1" data-aos="zoom-in" data-aos-duration="800">
             <section class="about text-center">
-                <h2>About</h2>
+                <h2>About me</h2>
                 <p>Hey there! 👋 I'm a frontend developer with a passion for cinema and music. At 31 years old, I've
                     found my calling in crafting beautiful and intuitive websites that combine form and function.
 
@@ -22,7 +22,7 @@
     <!-- ******TECHNOLOGIES SECTION****** -->
 
     <div class="row">
-        <div class="col cont m-5" data-aos="zoom-in" data-aos-duration="800">
+        <div class="col cont mt-5 m-1" data-aos="zoom-in" data-aos-duration="800">
             <section class="technologies text-center">
                 <h2 class="tec-title">Technologies I use</h2>
                 <p>I can make awseome web designes using the classical HTML, Css and Javascript, combined with the new
@@ -48,7 +48,7 @@
     </div>
 
     <div class="row">
-        <div class="col cont m-5" data-aos="zoom-in" data-aos-duration="800">
+        <div class="col cont mt-5 m-1 mb-5" data-aos="zoom-in" data-aos-duration="800">
             <section class="education text-center">
                 <h2>Education</h2>
                 <div>
