--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -36,6 +36,10 @@
             <img class="computer" src="./assets/img/crudApp.png" alt="Crud App">
             <p>Classical CRUD in which you can make your shopping list. You can add items, delete them, and mark them as
                 you buy them! <br> It is made completly with vanilla JavaScript </p>
+
+            <img class="computer" src="./assets/img/criptoApp.png" alt="Cripto App">
+            <p>This is a Cripto currency App in which you can know in real time the value of each coin. It is made with
+                Angular and Bootstrap for the styling and it works making a petition to the CoinGecko API.</p>
         </div>
     </div>
 </div>
