--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,3 @@
-<p>footer works!</p>
+<footer class="container-fluid d-flex justify-content-center footer">
+    <p>© <span id="year">{{ currentYear }}</span> - <span id="author">{{ authorName }}</span></p>
+</footer>
