--- a/src/styles.css
+++ b/src/styles.css
@@ -3,7 +3,11 @@
     margin: 0;
 }
 
-#video-fondo {
+body {
+    background-image: url(./assets/img/background-test.png);
+}
+
+/* #video-fondo {
     position: fixed;
     top: 0;
     left: 0;
@@ -11,6 +15,6 @@
     height: 100%;
     object-fit: cover;
     z-index: -1;
-}
+} */
 
 @media screen and (min-width: 768px) {}
