--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -28,7 +28,7 @@
                     </div>
 
                     <div class="col">
-                        <label for="message">Messagge</label>
+                        <label for="message">Message</label>
                         <textarea class="form-input" name="message" id="" cols="30" rows="5" #message="ngModel"
                             [(ngModel)]="usuario.message" required></textarea>
 
