--- a/src/styles.css
+++ b/src/styles.css
@@ -4,17 +4,5 @@
 }
 
 body {
-    background-image: url(./assets/img/background-test.png);
+    background-image: url(./assets/img/background2.png);
 }
-
-/* #video-fondo {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    z-index: -1;
-} */
-
-@media screen and (min-width: 768px) {}
