--- a/src/app/slider/slider.component.html
+++ b/src/app/slider/slider.component.html
@@ -1,3 +1,5 @@
+<!--HELLO SLIDER-->
+
 <div class="container-fluid no-margin-no-padding" id="home">
       <div class="slider">
             <div class="slide-in d-flex justify-content-center">
@@ -46,12 +48,14 @@
             </div>
       </div>
 
+      <!--PHOTO OF ME-->
+
       <div class="container cont-main w-75 h-25">
             <div class="row">
-                  <div class="col lara-photo d-none" data-aos="fade-down-right" data-aos-duration="1000">
+                  <div class="col lara-photo d-none">
                         <img class="picture" src="./assets/img/pictureLara.png" alt="Lara's photo">
                   </div>
-                  <div class="col text-center title-container" data-aos="fade-down-left" data-aos-duration="1000">
+                  <div class="col text-center title-container">
                         <h1>I'm Lara</h1>
                         <div class="frontend">
                               <h3>Frontend Developer</h3>
