--- a/src/app/contact/contact.component.css
+++ b/src/app/contact/contact.component.css
@@ -3,8 +3,8 @@
 }
 
 .contact-form {
-    border: 2px solid rgba(239, 237, 237, 0.83);
-    box-shadow: 3px 3px 3px 3px rgb(224, 222, 222);
+    border: 1px solid rgba(239, 237, 237, 0.83);
+    box-shadow: 3px 3px 3px 3px #FF2D6A;
     padding: 25px;
     height: auto;
 
@@ -17,7 +17,7 @@
 .form-input {
     width: 100%;
     border: 2px solid rgba(0, 0, 0, 0.83);
-    box-shadow: 3px 3px 3px 3px rgba(221, 218, 218, 0.83);
+    box-shadow: 3px 3px 3px 3px #FF2D6A;
 }
 
 h2 {
