--- a/src/app/projects/projects.component.css
+++ b/src/app/projects/projects.component.css
@@ -6,7 +6,7 @@ h2 {
 }
 
 .col-cont {
-    background-color: rgba(172, 171, 174, 0.745);
+    background-color: #ff2d68b1;
     border: 2px solid rgba(0, 0, 0, 0.83);
     box-shadow: 3px 5px 5px 5px rgba(229, 227, 227, 0.83);
     padding: 25px;
