--- a/src/styles.css
+++ b/src/styles.css
@@ -3,28 +3,6 @@
     margin: 0;
 }
 
-/* body {
+body {
     background-image: url(./assets/img/background2.png);
-} */
-
-#container {
-    -webkit-filter: url("#goo");
-    filter: url("#goo");
-    background-color: black;
-    background-repeat: repeat;
-    position: fixed;
-    top: 0px;
-    left: 0px;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    z-index: -1;
-}
-
-.blob {
-    background: #FF2D6A;
-    border-radius: 999px;
-    position: fixed;
-    -webkit-filter: url("#goo");
-    filter: url("#goo");
 }
