--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -2,8 +2,19 @@
     font-family: 'Bebas Neue', cursive;
 }
 
-.container-fluid {
-    margin-top: 50%;
+#about-title {
+    margin-top: 40%;
+    margin-left: 1%;
+    width: 97%;
+    border: 1px solid rgb(209, 206, 206);
+    box-shadow: 3px 3px 3px 3px rgba(249, 247, 247, 0.83);
+    padding: 5px;
+}
+
+#about-title h2 {
+    color: rgb(211, 211, 215);
+    text-shadow: 4px 4px 4px rgb(168, 15, 15);
+    font-size: 100px;
 }
 
 h2 {
@@ -41,7 +52,15 @@ p {
 @media screen and (min-width: 768px) {
     .container-fluid {
         width: 60%;
-        margin-top: 15%;
+    }
+
+    #about-title {
+        margin-top: 0;
+        margin-left: 1.5%;
+    }
+
+    #about-title h2 {
+        font-size: 300px;
     }
 
     p {
