--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,11 +1,14 @@
+<div class="text-center" id="about-title" data-aos="zoom-in" data-aos-duration="800">
+    <h2>About me</h2>
+</div>
+
+
 <div class="container-fluid" id="about">
 
     <!-- ******ABOUT SECTION****** -->
-
     <div class="row">
         <div class="col cont mt-5 m-1" data-aos="zoom-in" data-aos-duration="800">
             <section class="about text-center">
-                <h2>About me</h2>
                 <p>Hey there! 👋 I'm a frontend developer with a passion for cinema and music. At 31 years old, I've
                     found my calling in crafting beautiful and intuitive websites that combine form and function.
 
