--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,5 +1,8 @@
-<div class="container-fluid text-center" data-aos="flip-left" data-aos-duration="800" id="projects">
+<div class="text-center" id="projects-title" data-aos="zoom-in" data-aos-duration="800">
     <h2>Projects</h2>
+</div>
+
+<div class="container-fluid text-center" data-aos="flip-left" data-aos-duration="800" id="projects">
 
     <div class="row">
         <div class="col col-cont">
