--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,7 +4,7 @@
             <a class="nav-link active" href="#">Home</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#about">About</a>
+            <a class="nav-link" href="#about-title">About</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="#projects">Projects</a>
@@ -26,7 +26,7 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="#">Home</a>
-                    <a class="dropdown-item" href="#about">About</a>
+                    <a class="dropdown-item" href="#about-title">About</a>
                     <a class="dropdown-item" href="#projects">Projects</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="#contact">Contact</a>
