--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,5 +1,5 @@
 <div class="text-center" id="contact-title">
-    <h2>Contact me</h2>
+    <h2>Wanna talk?</h2>
 </div>
 
 <section class="container-fluid d-flex justify-content-center" id="contact">
@@ -7,6 +7,7 @@
 
         <div class="container-contact">
             <div class="contact-form row">
+                <h3 class="workInProg text-center">Work in progress...</h3>
                 <form #formContact="ngForm" (ngSubmit)="onSubmit()" action="https://formspree.io/f/xayzvawj"
                     method="POST">
                     <div class="col">
