--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -6,51 +6,58 @@
 <div class="container-fluid" id="about">
 
     <!-- ******ABOUT SECTION****** -->
-    <div class="row">
-        <div class="col cont mt-5 m-1" data-aos="zoom-in" data-aos-duration="800">
-            <section class="about text-center">
-                <p>Hey there! 👋 I'm a frontend developer with a passion for cinema and music. At 31 years old, I've
-                    found my calling in crafting beautiful and intuitive websites that combine form and function.
+    <div class="responsive">
+        <div class="row cont-ab-resp">
+            <div class="col cont mt-5 m-1 cont-resp" data-aos="zoom-in" data-aos-duration="800">
+                <section class="about text-center">
+                    <p>Hey there! 👋 I'm a frontend developer with a passion for cinema and music. At 31 years old, I've
+                        found my calling in crafting beautiful and intuitive websites that combine form and function.
 
-                    When I'm not busy coding, you can often find me jamming out to my favorite tunes or catching up on
-                    the latest films. I love exploring the intersection of design and technology, and strive to create
-                    unique user experiences that are both engaging and effective.
+                        When I'm not busy coding, you can often find me jamming out to my favorite tunes or catching up
+                        on
+                        the latest films. I love exploring the intersection of design and technology, and strive to
+                        create
+                        unique user experiences that are both engaging and effective.
 
-                    With my eye for detail and love of all things media, I'm excited to bring a fresh perspective to any
-                    project I work on. Let's collaborate and create something amazing together!</p>
-            </section>
+                        With my eye for detail and love of all things media, I'm excited to bring a fresh perspective to
+                        any
+                        project I work on. Let's collaborate and create something amazing together!</p>
+                </section>
+            </div>
+        </div>
+
+        <!-- ******TECHNOLOGIES SECTION****** -->
+
+        <div class="row cont-ab-resp cont-tec-resp">
+            <div class="col cont mt-5 m-1 cont-resp-2" data-aos="zoom-in" data-aos-duration="800">
+                <section class="technologies text-center">
+                    <h2 class="tec-title">Technologies I use</h2>
+                    <p>I can make awseome web designes using the classical HTML, Css and Javascript, combined with the
+                        new
+                        and helpful technologies such as Angular, React and Bootstrap. <br>
+                        Mobile First 👋 📱
+                    </p>
+                    <div class="d-flex tech-logos">
+                        <div class="angular-logo">
+                            <img class="angular logo" src="./assets/img/angular.png" alt="Angular logo">
+                        </div>
+                        <div class="react-logo">
+                            <img class="react logo" src="./assets/img/react.png" alt="React logo">
+                        </div>
+                        <div class="bootstrap-logo">
+                            <img class="bootstrap logo" src="./assets/img/bootstrap.png" alt="Bootstrap logo">
+                        </div>
+                        <div class="js-logo">
+                            <img class="javascript logo" src="./assets/img/javascript.png" alt="javascript logo">
+                        </div>
+                    </div>
+                </section>
+            </div>
         </div>
     </div>
 
-    <!-- ******TECHNOLOGIES SECTION****** -->
 
-    <div class="row">
-        <div class="col cont mt-5 m-1" data-aos="zoom-in" data-aos-duration="800">
-            <section class="technologies text-center">
-                <h2 class="tec-title">Technologies I use</h2>
-                <p>I can make awseome web designes using the classical HTML, Css and Javascript, combined with the new
-                    and helpful technologies such as Angular, React and Bootstrap. <br>
-                    Mobile First 👋 📱
-                </p>
-                <div class="d-flex tech-logos">
-                    <div class="angular-logo">
-                        <img class="angular logo" src="./assets/img/angular.png" alt="Angular logo">
-                    </div>
-                    <div class="react-logo">
-                        <img class="react logo" src="./assets/img/react.png" alt="React logo">
-                    </div>
-                    <div class="bootstrap-logo">
-                        <img class="bootstrap logo" src="./assets/img/bootstrap.png" alt="Bootstrap logo">
-                    </div>
-                    <div class="js-logo">
-                        <img class="javascript logo" src="./assets/img/javascript.png" alt="javascript logo">
-                    </div>
-                </div>
-            </section>
-        </div>
-    </div>
-
-    <div class="row">
+    <div class="row cont-ab-resp">
         <div class="col cont mt-5 m-1 mb-5" data-aos="zoom-in" data-aos-duration="800">
             <section class="education text-center">
                 <h2>Education</h2>
