changes in everything

--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -2,18 +2,20 @@
     font-family: 'Bebas Neue', cursive;
 }
 
+
 #about-title {
     margin-top: 40%;
     margin-left: 1%;
     width: 97%;
+    background-color: rgba(244, 171, 76, 0.774);
     border: 1px solid rgb(209, 206, 206);
-    box-shadow: 3px 3px 3px 3px rgba(249, 247, 247, 0.83);
+    box-shadow: 3px 3px 3px 3px rgba(4, 3, 3, 0.83);
     padding: 5px;
 }
 
 #about-title h2 {
-    color: rgb(211, 211, 215);
-    text-shadow: 4px 4px 4px rgb(168, 15, 15);
+    color: rgb(4, 4, 4);
+    text-shadow: 4px 4px 4px rgb(252, 251, 251);
     font-size: 100px;
 }
 
