--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -10,16 +10,20 @@
         <div class="row cont-ab-resp">
             <div class="col cont mt-5 m-1 cont-resp" data-aos="zoom-in" data-aos-duration="800">
                 <section class="about text-center">
-                    <p>Hey there! 👋 I'm a frontend developer with a passion for cinema and music. At 31 years old, I've
-                        found my calling in crafting beautiful and intuitive websites that combine form and function.
+                    <p>Hey there! 👋 I'm a frontend developer with a passion for cinema and music. At 31 years old,
+                        I've
+                        found my calling in crafting beautiful and intuitive websites that combine form and
+                        function.
 
-                        When I'm not busy coding, you can often find me jamming out to my favorite tunes or catching up
+                        When I'm not busy coding, you can often find me jamming out to my favorite tunes or catching
+                        up
                         on
                         the latest films. I love exploring the intersection of design and technology, and strive to
                         create
                         unique user experiences that are both engaging and effective.
 
-                        With my eye for detail and love of all things media, I'm excited to bring a fresh perspective to
+                        With my eye for detail and love of all things media, I'm excited to bring a fresh
+                        perspective to
                         any
                         project I work on. Let's collaborate and create something amazing together!</p>
                 </section>
@@ -32,7 +36,8 @@
             <div class="col cont mt-5 m-1 cont-resp-2" data-aos="zoom-in" data-aos-duration="800">
                 <section class="technologies text-center">
                     <h2 class="tec-title">Technologies I use</h2>
-                    <p>I can make awseome web designes using the classical HTML, Css and Javascript, combined with the
+                    <p>I can make awseome web designes using the classical HTML, Css and Javascript, combined with
+                        the
                         new
                         and helpful technologies such as Angular, React and Bootstrap. <br>
                         Mobile First 👋 📱
