--- a/src/app/slider/slider.component.html
+++ b/src/app/slider/slider.component.html
@@ -52,9 +52,6 @@
 
       <div class="container cont-main w-75 h-25">
             <div class="row">
-                  <div class="col lara-photo d-none">
-                        <img class="picture" src="./assets/img/pictureLara.png" alt="Lara's photo">
-                  </div>
                   <div class="col text-center title-container">
                         <h1>I'm Lara</h1>
                         <div class="frontend">
@@ -72,6 +69,9 @@
                               </a>
                         </div>
                   </div>
+                  <!-- <div class="col lara-photo d-none">
+                        <img class="picture" src="./assets/img/pictureLara.png" alt="Lara's photo">
+                  </div> -->
             </div>
       </div>
 </div>
