--- a/src/app/projects/projects.component.css
+++ b/src/app/projects/projects.component.css
@@ -9,8 +9,10 @@
 }
 
 #projects-title h2 {
-    color: rgb(211, 211, 215);
-    text-shadow: 4px 4px 4px rgb(168, 15, 15);
+    color: rgb(6, 6, 6);
+    background-color: rgba(244, 171, 76, 0.774);
+    border: 1px solid rgb(209, 206, 206);
+    box-shadow: 3px 3px 3px 3px rgba(4, 3, 3, 0.83);
     font-size: 100px;
 }
 
