--- a/src/app/slider/slider.component.css
+++ b/src/app/slider/slider.component.css
@@ -1,11 +1,11 @@
 .container {
     margin-bottom: 15%;
+
 }
 
 /* ******HELLO SLIDER******* */
 
 .slider {
-    height: auto;
     overflow: hidden;
     margin-top: 5%;
     display: flex;
@@ -19,8 +19,8 @@
 }
 
 .slider .slide-in {
-    animation: slide-in 40s linear infinite;
-    width: calc(200px * 14);
+    animation: slide-in 20s linear infinite;
+    width: calc(500px * 14);
 }
 
 @keyframes slide-in {
@@ -42,12 +42,24 @@
     opacity: 80%;
 }
 
+@keyframes circle-in-center {
+    from {
+        clip-path: circle(0%);
+    }
+
+    to {
+        clip-path: circle(125%);
+    }
+}
+
 /* *******MAIN TITLE********** */
 
 .title-container {
-    background-color: rgba(232, 232, 89, 0.872);
+    position: relative;
+    bottom: 70px;
+    background-color: rgb(246, 246, 243);
     border: 2px solid rgb(0, 0, 0);
-    box-shadow: 2px 2px 2px 2px rgba(249, 247, 247, 0.83);
+    box-shadow: 2px 2px 2px 2px rgba(218, 246, 7, 0.83);
 }
 
 h1 {
@@ -101,16 +113,21 @@ h1 {
 
     .lara-photo {
         display: inline !important;
-        width: 100%;
-        position: relative;
-        right: 5%;
+        width: 50%;
         height: 450px;
+
+    }
+
+    .cont-main {
+        width: 30% !important;
     }
 
     .picture {
-        width: 100%;
+        width: 150%;
         position: relative;
-        bottom: 120px;
+        bottom: 100px;
+        right: 150px;
+
     }
 
     .title-container {
