--- a/src/styles.css
+++ b/src/styles.css
@@ -4,14 +4,6 @@
 }
 
 body {
-    background-image: url(./assets/img/background2.png);
-}
-
-body::-webkit-scrollbar {
-    width: 7px;
-    background: black;
-}
-
-body::-webkit-scrollbar-thumb {
-    background-color: rgb(141, 17, 139);
+    background-image: url(./assets/img/testing.png);
+    background-size: contain;
 }
