--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -2,6 +2,36 @@
     <h2>Projects</h2>
 </div>
 
+<div id="carouselExampleCaptions" class="carousel slide container-fluid">
+
+    <div class="carousel-inner text-center">
+        <div class="carousel-item active">
+            <img src="./assets/img/crudApp.png" class="d-block w-100 computer" alt="Crud App">
+            <p>Classical CRUD in which you can make your shopping list. You can add items, delete them, and mark
+                them as you buy them!</p>
+            <a href="https://github.com/Laguerre91/crud"><button class="btn-git">GitHub</button></a>
+        </div>
+        <div class="carousel-item">
+            <img src="./assets/img/criptoApp.png" class="d-block w-100 computer" alt="Cripto App">
+            <p>This is a Cripto currency App in which you can know in real time the value of each coin. It is made
+                with
+                Angular and Bootstrap for the styling and it works making a petition to the CoinGecko API.</p>
+            <a href="https://github.com/Laguerre91/cripto-app"> <button class="btn-git">GitHub</button></a>
+        </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+    </button>
+</div>
+
+
+<!--///////////////////////////-->
+
 <div class="container-fluid text-center" data-aos="zoom-in" data-aos-duration="800" id="projects">
 
     <div class="row">
@@ -31,18 +61,6 @@
 
                 </div>
             </div>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col col-cont">
-            <img class="computer" src="./assets/img/crudApp.png" alt="Crud App">
-            <p>Classical CRUD in which you can make your shopping list. You can add items, delete them, and mark them as
-                you buy them! <br> It is made completly with vanilla JavaScript </p>
-
-            <img class="computer" src="./assets/img/criptoApp.png" alt="Cripto App">
-            <p>This is a Cripto currency App in which you can know in real time the value of each coin. It is made with
-                Angular and Bootstrap for the styling and it works making a petition to the CoinGecko API.</p>
         </div>
     </div>
 </div>
