--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -7,8 +7,9 @@
     margin-top: 40%;
     margin-left: 1%;
     width: 97%;
-    background-color: rgba(244, 171, 76, 0.774);
+    background-color: rgba(213, 140, 236, 0.912);
     border: 1px solid rgb(209, 206, 206);
+    border-radius: 10px;
     box-shadow: 3px 3px 3px 3px rgba(4, 3, 3, 0.83);
     padding: 5px;
 }
@@ -22,7 +23,6 @@
 h2 {
     color: rgba(0, 0, 0, 0.812);
     font-size: 40px;
-    border: 1px solid black;
 
 }
 
