--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -70,10 +70,37 @@
                     <h3>Technological University of Argentina (UTN)</h3>
                     <p>(2021-2022)</p>
                     <p>Html - Css - Javascript - Bootstrap - Apis - jQuery</p>
-                    <img class="cert" src="./assets/img/cert1.jpeg" width="250" height="200" alt="certificado">
+                    <!-- <img class="cert" src="./assets/img/cert1.jpeg" width="250" height="200" alt="certificado">
                     <img class="cert" src="./assets/img/cert2.jpeg" width="250" height="200" alt="certificado">
                     <img class="cert" src="./assets/img/cert3.jpeg" width="250" height="200" alt="certificado">
-                    <img class="cert" src="./assets/img/cert4.jpeg" width="250" height="200" alt="certificado">
+                    <img class="cert" src="./assets/img/cert4.jpeg" width="250" height="200" alt="certificado"> -->
+                </div>
+
+                <div id="carouselExample" class="carousel slide" data-bs-theme="dark">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="./assets/img/cert1.jpeg" class="d-block w-100" alt="certificate">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./assets/img/cert3.jpeg" class="d-block w-100" alt="certificate">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./assets/img/cert2.jpeg" class="d-block w-100" alt="certificate">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./assets/img/cert4.jpeg" class="d-block w-100" alt="certificate">
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
                 </div>
             </section>
         </div>
