--- a/src/app/contact/contact.component.css
+++ b/src/app/contact/contact.component.css
@@ -10,16 +10,15 @@
     margin-top: 40%;
     margin-left: 1%;
     width: 97%;
-    border: 1px solid rgb(209, 206, 206);
-    box-shadow: 3px 3px 3px 3px rgba(249, 247, 247, 0.83);
+    border: 1px solid rgb(5, 4, 4);
+    border-radius: 10px;
+    box-shadow: 3px 3px 3px 3px rgba(2, 2, 2, 0.83);
     padding: 5px;
+    background-color: rgba(213, 140, 236, 0.912);
 }
 
 #contact-title h2 {
     color: rgb(6, 6, 6);
-    background-color: rgba(244, 171, 76, 0.774);
-    border: 1px solid rgb(209, 206, 206);
-    box-shadow: 3px 3px 3px 3px rgba(4, 3, 3, 0.83);
     font-size: 100px;
 }
 
