--- a/src/app/projects/projects.component.css
+++ b/src/app/projects/projects.component.css
@@ -34,11 +34,12 @@ h2 {
 .carousel {
     margin: 10px;
     width: 95%;
-    padding: 5px;
+    padding: 20px;
     background-color: rgb(226, 174, 213);
     border: 1px solid black;
     border-radius: 10px;
     box-shadow: 2px 2px 2px black;
+    padding: 60px;
 }
 
 .btn-git {
@@ -52,6 +53,10 @@ h2 {
     border: 1px solid white;
 }
 
+.btn-git:hover {
+    background-color: rgba(63, 138, 238, 0.815);
+}
+
 .cellphone {
     margin: 10px;
 }
@@ -60,10 +65,6 @@ h3 {
     font-family: 'Bebas Neue', cursive;
     color: rgba(1, 1, 1, 0.698);
     font-size: 40px;
-}
-
-.computer {
-    width: 100%;
 }
 
 p {
