--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -36,7 +36,8 @@
             <div class="col cont mt-5 m-1 cont-resp-2" data-aos="zoom-in" data-aos-duration="800">
                 <section class="technologies text-center">
                     <h2 class="tec-title">Technologies I use</h2>
-                    <p>I can make awseome web designes using the classical HTML, Css and Javascript, combined with
+                    <p>I can make awseome web designes using the classical HTML, Css and Javascript, combined
+                        with
                         the
                         new
                         and helpful technologies such as Angular, React and Bootstrap. <br>
@@ -56,6 +57,15 @@
                             <img class="javascript logo" src="./assets/img/javascript.png" alt="javascript logo">
                         </div>
                     </div>
+                    <h3>backend side</h3>
+                    <p>I use technologies such as NodeJs and Express! <br> For databases I use MongoDB </p>
+
+                    <div class="d-flex justify-content-evenly align-items-center tech-logos-be">
+
+                        <img class="logo_be" src="./assets/img/nodelogo.png" alt="NodeJs logo">
+                        <img class="logo_be" src="./assets/img/mongologo.png" alt="MongoDB logo">
+
+                    </div>
                 </section>
             </div>
         </div>
@@ -70,10 +80,6 @@
                     <h3>Technological University of Argentina (UTN)</h3>
                     <p>(2021-2022)</p>
                     <p>Html - Css - Javascript - Bootstrap - Apis - jQuery</p>
-                    <!-- <img class="cert" src="./assets/img/cert1.jpeg" width="250" height="200" alt="certificado">
-                    <img class="cert" src="./assets/img/cert2.jpeg" width="250" height="200" alt="certificado">
-                    <img class="cert" src="./assets/img/cert3.jpeg" width="250" height="200" alt="certificado">
-                    <img class="cert" src="./assets/img/cert4.jpeg" width="250" height="200" alt="certificado"> -->
                 </div>
 
                 <div id="carouselExample" class="carousel slide" data-bs-theme="dark">
