--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
-<app-header></app-header>
-
-
-<app-slider></app-slider>
-<app-about></app-about>
-<app-projects></app-projects>
-<app-contact></app-contact>
-<app-footer></app-footer>
+<div id="content">
+    <app-header></app-header>
+    <app-slider></app-slider>
+    <app-about></app-about>
+    <app-projects></app-projects>
+    <app-contact></app-contact>
+    <app-footer></app-footer>
+</div>
