--- a/src/styles.css
+++ b/src/styles.css
@@ -8,3 +8,13 @@ body {
     background-size: contain;
     background-attachment: fixed;
 }
+
+@media screen and (min-width: 768px) {
+    #content {
+        width: 80%;
+        margin: 0px auto;
+        background-color: rgba(215, 216, 219, 0.321);
+        border-radius: 20px;
+        box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+    }
+}
