--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -10,7 +10,7 @@
     background-color: rgba(213, 140, 236, 0.912);
     border: 1px solid rgb(0, 0, 0);
     border-radius: 10px;
-    box-shadow: 3px 3px 3px 3px rgba(4, 3, 3, 0.83);
+    box-shadow: 5px 5px rgba(4, 3, 3, 0.83);
     padding: 5px;
 }
 
@@ -30,7 +30,7 @@ h2 {
     background-color: rgba(251, 249, 252, 0.814);
     border: solid 2px rgb(5, 5, 5);
     border-radius: 10px;
-    box-shadow: 2px 2px 2px 2px rgba(5, 5, 5, 0.83);
+    box-shadow: 4px 4px rgba(5, 5, 5, 0.83);
     padding: 30px;
     height: fit-content;
 }
