--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -27,7 +27,7 @@
         left: 14.5%;
         background-color: rgba(251, 249, 252, 0.814);
         border: solid 2px rgb(5, 5, 5);
-        box-shadow: 2px 2px 2px 2px rgba(5, 4, 5, 0.83);
+        box-shadow: 3px 3px rgba(5, 4, 5, 0.83);
         margin: 8px !important;
         z-index: 2222;
     }
