--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,7 +8,7 @@
                 <a class="nav-link" href="#about-title">About</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#projects">Projects</a>
+                <a class="nav-link" href="#projects-title">Projects</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#contact">Contact me</a>
