--- a/src/app/projects/projects.component.css
+++ b/src/app/projects/projects.component.css
@@ -6,7 +6,7 @@
     background-color: rgba(213, 140, 236, 0.912);
     border: 1px solid rgb(2, 2, 2);
     border-radius: 10px;
-    box-shadow: 3px 3px 3px 3px rgba(4, 3, 3, 0.83);
+    box-shadow: 5px 5px rgba(4, 3, 3, 0.83);
     padding: 5px;
 }
 
@@ -22,49 +22,28 @@ h2 {
     font-family: 'Bebas Neue', cursive;
 }
 
-.col-cont {
-    background-color: #fefefeb1;
-    border: 2px solid rgba(0, 0, 0, 0.83);
-    box-shadow: 3px 3px 3px rgba(226, 219, 20, 0.83);
-    padding: 25px;
-    height: auto;
-    margin: 10px;
+.projects_container {
+    width: 100%;
 }
 
-.carousel {
-    margin: 10px;
-    width: 95%;
-    padding: 20px;
-    background-color: rgb(226, 174, 213);
-    border: 1px solid black;
+h4 {
+    font-family: 'Bebas Neue', cursive;
+    color: white;
+}
+
+.card {
+    background-color: rgba(3, 41, 157, 0.889);
+    border: solid 2px rgb(5, 5, 5);
     border-radius: 10px;
-    box-shadow: 2px 2px 2px black;
-    padding: 60px;
-}
-
-.btn-git {
-    font-family: 'Bebas Neue', cursive;
-    font-size: 20px;
-    width: 30%;
-    border-radius: 20px;
-    padding: 5px;
-    background-color: rgba(226, 56, 245, 0.815);
-    ;
-    border: 1px solid white;
-}
-
-.btn-git:hover {
-    background-color: rgba(63, 138, 238, 0.815);
-}
-
-.cellphone {
+    box-shadow: 2px 2px rgba(5, 5, 5, 0.83);
     margin: 10px;
+    padding: 20px;
 }
 
-h3 {
-    font-family: 'Bebas Neue', cursive;
-    color: rgba(1, 1, 1, 0.698);
-    font-size: 40px;
+.card img {
+    border: 2px solid black;
+    border-radius: 10px;
+    box-shadow: 2px 2px rgba(5, 5, 5, 0.83);
 }
 
 p {
@@ -76,15 +55,27 @@ p {
     padding: 10px;
 }
 
+.github-btn {
+    font-family: 'Bebas Neue', cursive;
+    width: 40%;
+    padding: 5px;
+    background-color: rgba(226, 56, 245, 0.815);
+    border: 1px solid black;
+    box-shadow: 2px 2px rgba(5, 5, 5, 0.83);
+    border-radius: 5px;
+}
+
+
+
 @media screen and (min-width: 768px) {
 
-    .container-fluid {
-        width: 60%;
+    .container {
+        width: 100%;
     }
 
-    .carousel {
-        width: 60%;
-        margin-left: 20%;
+    .projects_container {
+        display: flex;
+        justify-content: center;
     }
 
     #projects-title {
@@ -97,11 +88,20 @@ p {
         font-size: 300px;
     }
 
+    .card {
+        width: 40%;
+    }
 
+    .card:hover {
+        translate: 1% 1%;
+    }
 
-    .responsive-container {
-        display: flex;
-        justify-content: center;
+    .card img p {
+        width: 35%;
+    }
+
+    .github-btn:hover {
+        background-color: rgb(0, 81, 128);
     }
 
 }
