--- a/src/app/slider/slider.component.css
+++ b/src/app/slider/slider.component.css
@@ -60,7 +60,7 @@
     bottom: 70px;
     border: 2px solid rgb(0, 0, 0);
     border-radius: 10px;
-    box-shadow: 2px 2px 2px 2px rgba(3, 3, 3, 0.83);
+    box-shadow: 5px 5px rgba(3, 3, 3, 0.83);
 }
 
 h1 {
@@ -136,7 +136,7 @@ h1 {
     }
 
     .social-media a img:hover {
-        background-color: rgba(148, 233, 192, 0.917);
+        background-color: rgb(0, 81, 128);
         border-radius: 50px;
     }
 }
