--- a/src/app/projects/projects.component.css
+++ b/src/app/projects/projects.component.css
@@ -57,6 +57,7 @@ p {
 
 .github-btn {
     font-family: 'Bebas Neue', cursive;
+    color: black;
     width: 40%;
     padding: 5px;
     background-color: rgba(226, 56, 245, 0.815);
@@ -76,6 +77,7 @@ p {
     .projects_container {
         display: flex;
         justify-content: center;
+        margin-left: 0.3%;
     }
 
     #projects-title {
