improvement in projects section

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -109,6 +109,13 @@
                     </button>
                 </div>
             </section>
+            <section class="certificates text-center">
+                <h2 class="m-3">Certificates</h2>
+                <h3>Google Activate - Mobile app development</h3>
+                <div>
+                    <img class="google-certificate" src="./assets/img/google-certificate.jpeg" alt="google certificate">
+                </div>
+            </section>
         </div>
     </div>
 </div>
