--- a/src/app/projects/projects.component.css
+++ b/src/app/projects/projects.component.css
@@ -57,13 +57,17 @@ p {
 
 .github-btn {
     font-family: 'Bebas Neue', cursive;
-    color: black;
     width: 40%;
     padding: 5px;
     background-color: rgba(226, 56, 245, 0.815);
     border: 1px solid black;
     box-shadow: 2px 2px rgba(5, 5, 5, 0.83);
     border-radius: 5px;
+}
+
+a {
+    text-decoration: none;
+    color: black;
 }
 
 
