new project added

--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -79,5 +79,23 @@
                 </button>
             </div>
         </div>
+        <div class="card">
+            <img src="./assets/img/blogApp.png" class="card-img-top" alt="Crypto app">
+            <div class="card-body">
+                <h4>Series Blog</h4>
+                <p class="card-text">Personal blog in which I upload all the TV series that I recommend. It is possible
+                    to filter by genre or by the streaming platform where the series can be found.</p>
+                <p>Tech stack: <br>
+                    <img src="./assets/img/html5.png" alt="html logo" width="50">
+                    <img src="./assets/img/bootstrap-1.png" alt="html logo" width="50">
+                    <img src="./assets/img/javascript-1.png" alt="javascript logo" width="50">
+                    <img src="./assets/img/css.png" alt="css logo" width="47">
+                    <img src="./assets/img/angular-1.png" alt="angular" width="50">
+                </p>
+                <button class="github-btn">
+                    <a href="https://github.com/Laguerre91/cripto-app" target="_blank">Github</a>
+                </button>
+            </div>
+        </div>
     </div>
 </div>
